<resources>
    <string name="app_name">Simple Note</string>
    <string name="add_note">Add note</string>
    <string name="item_deleted_toast">item deleted</string>
    <string name="saved_toast">saved</string>
    <string name="save_fail_toast">save failed!</string>
    <string name="updated_toast">updated</string>
    <string name="update_failed_toast">update failed!</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_message">Are you sure you want to permanently delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="type_your_title">Type your title</string>
    <string name="type_something">Type something…</string>
    <string name="more_option">more option</string>
    <string name="close_more_option">close more option</string>
    <string name="blue_color">blue color</string>
    <string name="yellow_color">yellow color</string>
    <string name="white_color">white color</string>
    <string name="purple_color">purple color</string>
    <string name="orange_color">orange color</string>
    <string name="black_color">black color</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="note_title">Note title</string>

</resources>