<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".fragments.NoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnSecondary"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="?attr/colorPrimary"
                android:padding="16dp">

                <View
                    android:id="@+id/colorView"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:elevation="8dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/blue" />

                <RelativeLayout
                    android:id="@+id/layoutImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/colorView">



                    <ImageView
                        android:id="@+id/imgNote"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:visibility="gone"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp" />

                    <ImageView
                        android:id="@+id/imgDelete"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_alignParentEnd="true"
                        android:visibility="gone"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_delete" />


                </RelativeLayout>

                <EditText
                    android:id="@+id/etNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/type_your_title"
                    android:inputType="text"
                    android:textColor="?attr/color"
                    android:textColorHint="#9F9F9F"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:autofillHints="aa" />

                <EditText
                    android:id="@+id/etNoteBody"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/type_something"
                    android:inputType="textMultiLine"
                    android:textColor="?attr/color"
                    android:textColorHint="#9F9F9F"
                    android:textSize="16sp"
                    android:autofillHints="aa" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:borderWidth="0dp"
        android:src="@drawable/ic_tick"
        android:tintMode="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:contentDescription="@string/add_note" />

    <FrameLayout
        android:id="@+id/frameLayoutMore"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_more"
            android:contentDescription="@string/more_option" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>